--- a/style.css
+++ b/style.css
@@ -1,75 +1,56 @@
-.background {
-  /* Set rules to fill background */
-  min-height: 100%;
-  min-width: 1024px;
-
-  /* Set up proportionate scaling */
-  width: 100%;
-  height: auto;
-
-  /* Set up positioning */
-  position: fixed;
-  top: 0;
-  left: 0;
+.logo {
+  height: 2em;
+  width: 2em;
+  padding: 0;
 }
 
-h1 {
+h1,
+h2 {
   font-family: "Lora", serif;
 }
 
-p {
+p,
+ul {
   font-family: "Roboto", sans-serif;
 }
 
-.secondary_font {
-  font-family: "Roboto", sans-serif;
+.v-center {
+  display: flex;
+  align-items: center;
 }
 
-/* Container holding the image and the text */
-.container {
-  position: relative;
-  text-align: left;
-  color: white;
+/* Background image */
+.bg-image {
+  background: url("img/background.jpg");
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+  background-position: center;
 }
 
-/* Centered text */
-.centered {
-  position: absolute;
-  top: 200px;
-  left: 50%;
-}
-
-.left {
-  position: absolute;
-  top: 100px;
-  left: 10%;
-  width: 30%;
-}
-
-.top-right {
-  position: absolute;
-  top: 10px;
-  right: 2%;
-}
-
-nav {
-  display: inline;
-}
+/* Nav Bar styling*/
 
 nav > ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
+
 ul > li {
   display: inline;
 }
 
 li a {
-  color: white;
+  color: black;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+}
+
+/* Sticker */
+
+#sticker {
+  width: 20em;
+  height: auto;
 }
 
 #sticker:hover {
