--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@ ul {
 
 strong {
   color: #fa897b;
-  opacity: 0.7;
 }
 
 .color-white {
@@ -113,9 +112,29 @@ a {
   width: 7em;
   height: auto;
 }
+
 .small-image {
   width: 5em;
   height: auto;
+}
+
+.xsmall-image {
+  width: 3em;
+  height: auto;
+}
+
+.xxsmall-image {
+  width: 2em;
+  height: auto;
+}
+
+hr {
+  color: lightgray;
+  background-color: lightgray;
+  border: none;
+  height: 0.1em !important;
+  width: auto;
+  margin: 0.5em;
 }
 
 /* Background image */
@@ -199,4 +218,72 @@ a:hover {
   100% {
     transform: translate(1px, -2px) rotate(-1deg);
   }
+}
+
+.px-6 {
+  padding-left: 4rem !important;
+  padding-right: 4rem !important;
+}
+
+.px-7 {
+  padding-left: 5rem !important;
+  padding-right: 5rem !important;
+}
+
+.px-8 {
+  padding-left: 6rem !important;
+  padding-right: 6rem !important;
+}
+
+.px-9 {
+  padding-left: 7rem !important;
+  padding-right: 7rem !important;
+}
+
+.px-10 {
+  padding-left: 8rem !important;
+  padding-right: 8rem !important;
+}
+
+.px-12 {
+  padding-left: 10rem !important;
+  padding-right: 10rem !important;
+}
+
+.py-7 {
+  padding-top: 5rem !important;
+  padding-bottom: 5rem !important;
+}
+
+.py-8 {
+  padding-top: 6rem !important;
+  padding-bottom: 6rem !important;
+}
+
+.pt-6 {
+  padding-top: 4rem !important;
+}
+
+.pt-7 {
+  padding-top: 5rem !important;
+}
+
+.pt-8 {
+  padding-top: 6rem !important;
+}
+
+.pt-9 {
+  padding-top: 7rem !important;
+}
+
+.pt-10 {
+  padding-top: 8rem !important;
+}
+
+.pt-11 {
+  padding-top: 9rem !important;
+}
+
+.pt-12 {
+  padding-top: 10rem !important;
 }
