Cambios casi definitivos

--- a/style.css
+++ b/style.css
@@ -64,9 +64,9 @@ a {
   position: relative;
 }
 
-.hobbies-h {
+.hobbies-img {
   width: 10em;
-  height: auto;
+  height: 10em;
 }
 .hobbies-v {
   height: 10em;
