--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-.row {
-  padding-right: 0;
-}
 .logo {
   height: 2em;
   width: 2em;
@@ -57,7 +54,6 @@ a {
 
 .card-simple {
   /*border: 1px solid lightgray;*/
-  border-radius: 5px;
   width: 7em;
   height: 8em;
   align-items: center;
@@ -67,10 +63,6 @@ a {
 .hobbies-img {
   width: 10em;
   height: 10em;
-}
-.hobbies-v {
-  height: 10em;
-  width: auto;
 }
 
 .skill {
@@ -82,6 +74,7 @@ a {
 .checked {
   color: orange;
 }
+
 .raiting {
   display: inline-block !important;
 }
@@ -106,6 +99,7 @@ a {
   cursor: pointer;
   border-radius: 5px;
   font-family: "Roboto", sans-serif;
+  text-decoration: none;
 }
 
 .btn-simple:hover {
@@ -179,56 +173,11 @@ a:hover {
   text-decoration: underline white;
 }
 
-/* Sticker */
-
-#sticker {
-  width: 19em;
-  height: auto;
+.song {
+  width: 300px;
 }
 
-#sticker:hover {
-  /* Start the shake animation and make the animation last for 0.5 seconds */
-  animation: shake 1s;
-
-  /* When the animation is finished, start again */
-  animation-iteration-count: infinite;
-}
-
-@keyframes shake {
-  0% {
-    transform: translate(1px, 1px) rotate(0deg);
-  }
-  10% {
-    transform: translate(-1px, -2px) rotate(-1deg);
-  }
-  20% {
-    transform: translate(-3px, 0px) rotate(1deg);
-  }
-  30% {
-    transform: translate(3px, 2px) rotate(0deg);
-  }
-  40% {
-    transform: translate(1px, -1px) rotate(1deg);
-  }
-  50% {
-    transform: translate(-1px, 2px) rotate(-1deg);
-  }
-  60% {
-    transform: translate(-3px, 1px) rotate(0deg);
-  }
-  70% {
-    transform: translate(3px, 1px) rotate(-1deg);
-  }
-  80% {
-    transform: translate(-1px, -1px) rotate(1deg);
-  }
-  90% {
-    transform: translate(1px, 2px) rotate(0deg);
-  }
-  100% {
-    transform: translate(1px, -2px) rotate(-1deg);
-  }
-}
+/*Paddings*/
 
 .px-6 {
   padding-left: 4rem !important;
@@ -318,5 +267,56 @@ a:hover {
   .px-lg-12 {
     padding-left: 10rem !important;
     padding-right: 10rem !important;
+  }
+}
+
+/* Sticker */
+
+#sticker {
+  width: 19em;
+  height: auto;
+}
+
+#sticker:hover {
+  /* Start the shake animation and make the animation last for 0.5 seconds */
+  animation: shake 1s;
+
+  /* When the animation is finished, start again */
+  animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
   }
 }
